k8s/users/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    networking.gke.io/managed-certificates: "cert" # Ensure this matches your certificate name
spec:
  rules:
    - host: aprikt.online
      http:
        paths:
          - path: /v1/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: users
                port:
                  number: 3000

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: users
#   annotations:
#     kubernetes.io/ingress.class: "alb"
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     networking.gke.io/managed-certificates: "cert"
# spec:
#   rules:
#     - host: aprikt.online
#       http:
#         paths:
#           - path: /v1/*
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: users
#                 port:
#                   number: 3000

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: users
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /v1/*
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: users
#                 port:
#                   number: 3000
